fix: add spacer below footer so content is always visible
closes #129

--- a/src/Main.scss
+++ b/src/Main.scss
@@ -3,8 +3,9 @@
     grid-template-areas: 
         'left header right'
         'left board right'
-        'left footer right';
-    grid-template-rows: 1fr min-content 1fr;
+        'left footer right'
+        'spacer spacer spacer';
+    grid-template-rows: 1fr min-content 1fr 2.5rem;
     grid-template-columns: 1fr min-content 1fr;
     padding: 5px;
 
